TinyWall Changelog
---------------------

3.1.x - Maintenance release (xx.10.2021.)
- Add option to block internet during display power-save
- Heuristically determine and show PIDs of blocked processes if possible
- Support for showing and whitelisting services in Processes and Connections windows
- Launch GUI with elevated privileges on boot if possible
- Use exact capitalization of paths from autolearn and blocked processes
- Avoid creation of redundant "-" entries during autolearn
- Fix "active connections" and "open ports" lists would not recognize UWP processes as such
- Fix rule is ineffective if loaded while its target path is not mounted
- Fix rule is ineffective for paths with certain international characters
- Fix Bulgarian translation not loading
- Updated Italian translation
- Deprecation notes:
    Windows 7, 8, 8.1, and certain older versions of Windows 10 
	will soon not be supported in a future TinyWall release.

---------------------

3.0.10 - Maintenance release (04.11.2020.)
- Fix invalid WFP rules created for "System" on some machines (3.0.9 regression)

---------------------

3.0.9 - Maintenance release (01.11.2020.)
- Automatically ask for passphrase when needed, and remove now redundant "Unlock" menu item
- Fix child process monitoring not working (3.0.7 regression)
- Fix memory leak in traffic rate monitor
- Fix service becomes temporarily unresponsive when network parameters change
- Fix missing signature could be incorrectly detected as an invalid signature
- Reduce dependency on WMI
- Add runtime profiling feature
- Updated Brazilian Portuguese and Polish localizations
- New Bulgarian localization

---------------------

3.0.8 - Maintenance release (27.09.2020.)
- Add workaround for "grey icon on Win7" issue
  Note: On affected systems icon will appear with considerable delay after boot. This is expected.
- Fix WMI leak when mountpoints change
- Fix GUI crash if mountpoints change after changing the GUI language